@@ -52,7 +52,7 @@ public class MgiPhenotypingColonyReportPhenotypingServiceImpl implements MgiPhen
                 .entrySet()
                 .stream()
                 .filter(e -> e.getValue().size() == 1)
-                .collect(Collectors.toMap(Map.Entry::getKey, e -> List.copyOf(e.getValue()).get(0)));
+                .collect(Collectors.toMap(Map.Entry::getKey, e -> List.copyOf(e.getValue()).getFirst()));
     }
 
     @Override
@@ -73,7 +73,7 @@ public class MgiPhenotypingColonyReportPhenotypingServiceImpl implements MgiPhen
                 .entrySet()
                 .stream()
                 .filter(e -> e.getValue().size() == 1)
-                .collect(Collectors.toMap(map -> map.getKey(), map -> List.copyOf(map.getValue()).get(0)));
+                .collect(Collectors.toMap(Map.Entry::getKey, map -> List.copyOf(map.getValue()).getFirst()));
     }
 
     @Override
@@ -84,15 +84,14 @@ public class MgiPhenotypingColonyReportPhenotypingServiceImpl implements MgiPhen
 
     private List<Long> getFilteredMutationIds() {
         return filteredOutcomeMutationMap
-                .entrySet()
+                .values()
                 .stream()
-                .map(e -> e.getValue().getMutationId())
+                .map(MgiPhenotypingColonyReportOutcomeMutationProjection::getMutationId)
                 .collect(Collectors.toList());
     }
 
 
     private List<Long> getOutcomeIds() {
-        List<Long> outcomeIds = pap.stream().map(x -> x.getOutcomeId()).collect(Collectors.toList());
-        return outcomeIds;
+        return pap.stream().map(MgiPhenotypingColonyReportPhenotypingAttemptProjection::getOutcomeId).collect(Collectors.toList());
     }
 }
